Added some maps

--- a/taxi.Rmd
+++ b/taxi.Rmd
@@ -30,6 +30,10 @@ taxi <- read.csv("taxi_data.csv")
 ## Libraries
 
 ```{r}
+#install.packages("ggplot2")
+#install.packages("dplyr")
+#install.packages("tidyr")
+#install.packages("leaps")
 library(dplyr)
 library(ggplot2)
 library(leaps)
@@ -73,6 +77,193 @@ ggplot(taxi, aes(x = passenger_count, y = tip_pct)) + geom_boxplot()
 ## All-Subsets Regression to Predict `tip_pct`
 
 ```{r}
+
+```
+
+## Location Plot
+
+```{r}
+#remove rows with abnormal dropoff longitudes
+#ggplot(taxi, aes(x = dropoff_longitude, y = dropoff_latitude)) + geom_point()
+library(ggmap)
+library(mapproj)
+
+MAXLAT <- 40.85
+MINLAT <- 40.675
+MAXLONG <- -73.85
+MINLONG <- -74.1
+pos <- filter(taxi, pickup_longitude < MAXLONG, pickup_longitude > MINLONG, pickup_latitude < MAXLAT, pickup_latitude > MINLAT)
+
+
+map <- get_map(location = c(MINLONG,MINLAT, MAXLONG, MAXLAT), source = "stamen", maptype = "watercolor")
+ggmap(map) + geom_point(aes(x = pickup_longitude, y = pickup_latitude), data = pos, alpha = 0.3, col = "red")
+```
+
+```{r}
+GRIDLENGTH <- 100 # Number of Columns in Grid
+long_unit <- (MAXLONG - MINLONG)/GRIDLENGTH
+lat_unit <- (MAXLAT - MINLAT)/GRIDLENGTH
+
+lat_bound <- seq(from = MINLAT, to = MAXLAT, by = lat_unit)
+long_bound <- seq(from = MINLONG, to = MAXLONG, by = long_unit)
+
+plot(pos$pickup_latitude ~ pos$pickup_longitude)
+for(i in 1:GRIDLENGTH) {
+  abline(h = lat_bound[i], lwd = 1,  col = rgb(0.1, 0.1, 0.1, alpha = 0.3))
+  abline(v = long_bound[i], lwd = 1, col = rgb(0.1, 0.1, 0.1, alpha = 0.3))
+}
+
+```
+
+```{r}
+pos$lat_region <- rep(NA, nrow(pos))
+pos$long_region <- rep(NA, nrow(pos))
+length(lat_bound)
+  for(i in 1:nrow(pos)) {
+    for(k in 1:(GRIDLENGTH)){
+      if(pos$pickup_latitude[i] >= lat_bound[k] & pos$pickup_latitude[i] < lat_bound[k + 1]){         pos$lat_region[i] <- k
+        break
+      } # end if
+    } # end for k
+    for(k in 1:(GRIDLENGTH)){
+      if(pos$pickup_longitude[i] >= long_bound[k] & pos$pickup_long[i] < long_bound[k + 1]) {
+        pos$long_region[i] <- k
+        break
+      }# end if
+    }# end for k
+  }# end for i
+
+```
+
+```{r}
+grouped <- group_by(pos, lat_region, long_region) %>% summarize(lat_dir = mean(dropoff_latitude - pickup_latitude), long_dir = mean(dropoff_longitude - pickup_longitude), count = n())
+
+
+grouped$lat_min = rep(NA, nrow(grouped))
+grouped$lat_max = rep(NA, nrow(grouped))
+grouped$long_min = rep(NA, nrow(grouped))
+grouped$long_max = rep(NA, nrow(grouped))
+
+for(i in 1:nrow(grouped)) {
+  grouped$lat_min[i] <- lat_bound[grouped$lat_region[i]]
+  grouped$lat_max[i] <- lat_bound[grouped$lat_region[i] + 1]
+  grouped$long_min[i] <- long_bound[grouped$long_region[i]]
+  grouped$long_max[i] <- long_bound[grouped$long_region[i] + 1]
+}
+
+
+ggplot(data = grouped, aes(xmin = long_min, xmax = long_max, ymin = lat_min, ymax = lat_max, fill = count)) + geom_rect() + scale_fill_gradient("Number of Rides", low = "red", high = "white")
+```
+
+```{r}
+#install.packages("rworldmap")
+#install.packages("ggmap")
+#install.packages("mapproj")
+library(ggmap)
+library(mapproj)
+map <- get_map(location = c(MINLONG,MINLAT, MAXLONG, MAXLAT), source = "stamen", maptype = "watercolor")
+
+ggmap(map)+ geom_rect(aes(x = long_min, y = long_max, xmin = long_min, xmax = long_max, ymin = lat_min, ymax = lat_max, fill = count), data = grouped) + scale_fill_gradientn(colors = rainbow(7)) + labs(title = "Number of Taxi Pickups by Region", x = expression(italic("Longitude")~"(degrees)"),y = expression(italic("Latitude")~"(degrees)"))
+```
+
+
+Direction of Motion Plot
+
+```{r}
+#remove rows with abnormal dropoff longitudes
+
+MAXLAT <- 40.85
+MINLAT <- 40.675
+MAXLONG <- -73.85
+MINLONG <- -74.1
+pos <- filter(taxi, pickup_longitude < MAXLONG, pickup_longitude > MINLONG, pickup_latitude < MAXLAT, pickup_latitude > MINLAT) # selects all taxi rides whose pickup was within the specified region. Stores these rides to a new data frame 'pos'
+pos <- filter(pos, dropoff_longitude != 0, dropoff_latitude!= 0)
+pos <- filter(pos, dropoff_longitude != pickup_longitude, dropoff_latitude != pickup_latitude)
+
+map <- get_map(location = c(MINLONG,MINLAT, MAXLONG, MAXLAT), source = "stamen", maptype = "watercolor")
+ggmap(map) + geom_point(aes(x = pickup_longitude, y = pickup_latitude), data = pos, alpha = 0.3, col = "red") # plots pickup sites
+```
+
+
+```{r}
+GRIDLENGTH <- 25 # Number of Columns in Grid
+long_unit <- (MAXLONG - MINLONG)/GRIDLENGTH
+lat_unit <- (MAXLAT - MINLAT)/GRIDLENGTH
+
+lat_bound <- seq(from = MINLAT, to = MAXLAT, by = lat_unit)
+long_bound <- seq(from = MINLONG, to = MAXLONG, by = long_unit)
+
+plot(pos$pickup_latitude ~ pos$pickup_longitude)
+for(i in 1:GRIDLENGTH) {
+  abline(h = lat_bound[i], lwd = 1,  col = rgb(0.1, 0.1, 0.1, alpha = 0.3))
+  abline(v = long_bound[i], lwd = 1, col = rgb(0.1, 0.1, 0.1, alpha = 0.3))
+} # plots grid, as divided
+```
+
+
+```{r}
+# Identifies what grid squares each pickup location is located in. Lat_region gives vertical grid number. Long_region gives horizontal grid number
+
+pos$lat_region <- rep(NA, nrow(pos)) 
+pos$long_region <- rep(NA, nrow(pos))
+length(lat_bound)
+  for(i in 1:nrow(pos)) {
+    for(k in 1:(GRIDLENGTH)){
+      if(pos$pickup_latitude[i] >= lat_bound[k] & pos$pickup_latitude[i] < lat_bound[k + 1]){         pos$lat_region[i] <- k
+        break
+      } # end if
+    } # end for k
+    for(k in 1:(GRIDLENGTH)){
+      if(pos$pickup_longitude[i] >= long_bound[k] & pos$pickup_long[i] < long_bound[k + 1]) {
+        pos$long_region[i] <- k
+        break
+      }# end if
+    }# end for k
+  }# end for i
+```
+
+```{r}
+head(pos)
+```
+
+
+```{r}
+SIZEFACTOR = 0.01 # Desired Magnitude of Direction Arrows
+pos <- mutate(pos, lat_dir = (dropoff_latitude - pickup_latitude), long_dir = (dropoff_longitude - pickup_longitude))
+
+pos <- mutate(pos, lat_dir_scaled = lat_dir * SIZEFACTOR/sqrt(lat_dir^2 + long_dir^2), long_dir_scaled = long_dir * SIZEFACTOR /sqrt(lat_dir^2 + long_dir^2))
+# NaN results for those rides where pickup and dropoff locations are equal.
+```
+
+```{r}
+grouped <- group_by(pos, lat_region, long_region) %>% summarize(lat_dir_avg = mean(lat_dir_scaled, na.rm = TRUE), long_dir_avg = mean(long_dir_scaled, na.rm =TRUE), count = n())
+
+
+grouped$lat_min = rep(NA, nrow(grouped))
+grouped$lat_max = rep(NA, nrow(grouped))
+grouped$long_min = rep(NA, nrow(grouped))
+grouped$long_max = rep(NA, nrow(grouped))
+
+for(i in 1:nrow(grouped)) {
+  grouped$lat_min[i] <- lat_bound[grouped$lat_region[i]]
+  grouped$lat_max[i] <- lat_bound[grouped$lat_region[i] + 1]
+  grouped$long_min[i] <- long_bound[grouped$long_region[i]]
+  grouped$long_max[i] <- long_bound[grouped$long_region[i] + 1]
+}
+
+grouped <- mutate(grouped, avg_lat = (lat_max + lat_min)/2, avg_long = (long_max + long_min)/2)
+```
+
+
+```{r}
+ggplot(data = grouped, aes(xmin = long_min, xmax = long_max, ymin = lat_min, ymax = lat_max, fill = count)) + geom_rect() + scale_fill_gradient("Number of Rides", low = "red", high = "white")
+```
+
+
+```{r}
+
+
+ggmap(map) + geom_segment(aes(x = avg_long, xend = (avg_long + long_dir_avg), y = avg_lat, yend = (avg_lat + lat_dir_avg), fill = "black"), data = grouped, arrow = arrow(length=unit(0.15,"cm"), ends="first", type = "closed")) + labs(title = "Direction of Motion by Region", x = expression(italic("Longitude")~"(degrees)"),y = expression(italic("Latitude")~"(degrees)"))
 
 ```
 
