--- a/taxi.Rmd
+++ b/taxi.Rmd
@@ -71,6 +71,10 @@ dataset: time (`dropoff_datetime` and `pickup_datetime`), location
     * Goldman Sachs and Citi pickup times?
   * What factors predict how much (as a percentage of their total fare) a person 
     tips?
+  * Are people more generous around the holidays?
+  * Look into which areas have highest pickup
+  * Same map by dropoff
+  * Time
 
 
 ### Code
@@ -119,6 +123,13 @@ taxi$pickup_hour <- as.numeric(taxi$pickup_hour)
 taxi$dropoff_hour <- substr(taxi$dropoff_datetime, 12, 13)
 taxi$dropoff_hour <- as.numeric(taxi$dropoff_hour)
 ```
+
+Times
+
+6-10
+10-4
+4-10
+11-5
 
 `passenger_count`
 ```{r}
