--- a/taxi.Rmd
+++ b/taxi.Rmd
@@ -182,6 +182,13 @@ ggplot(taxi, aes(x = factor_passengers, y = tip_pct)) +
     "Number of Passengers", y = "Percentage Tipped")
 ```
 
+This plot demonstrates that the tip percentage does not appear to change with 
+the addition of more passengers. The average tip appears to be around 20% which 
+is considered a standard tip. We need to further explore whether tip percentage 
+is affected by location or distance, which we do in the regression below. 
+Furthermore, we will explore where larger groups tend to travel. For example, we 
+predict that larger groups may travel to more touristy areas. 
+
 ## All-Subsets Regression to Predict `tip_pct`
 
 ```{r}
