--- a/taxi.Rmd
+++ b/taxi.Rmd
@@ -163,18 +163,33 @@ taxi$dropoff_hour <- substr(taxi$dropoff_datetime, 12, 13)
 taxi$dropoff_hour <- as.numeric(taxi$dropoff_hour)
 ```
 
-Create `avg_speed`
+Only consider latitudes and longitudes actually in NYC
+
+```{r}
+MAXLAT <- 40.85
+MINLAT <- 40.675
+MAXLONG <- -73.85
+MINLONG <- -74.1
+taxi <- filter(taxi, pickup_longitude < MAXLONG, pickup_longitude > MINLONG, 
+               pickup_latitude < MAXLAT, pickup_latitude > MINLAT)
+```
+
+Create `trip_duration`
 
 ```{r}
 taxi$pickup_datetime <- ymd_hms(taxi$pickup_datetime)
 taxi$dropoff_datetime <- ymd_hms(taxi$dropoff_datetime)
 taxi$trip_duration <- (taxi$dropoff_datetime - taxi$pickup_datetime) / 3600
 taxi$trip_duration <- as.numeric(taxi$trip_duration)
-
-
-taxi$avg_speed <- taxi$trip_distance / taxi$trip_duration
+taxi$trip_duration[taxi$trip_duration == 0] <- NA
 ```
 
+Create `avg_speed`
+
+```{r}
+taxi$avg_speed <- taxi$trip_distance / taxi$trip_duration
+taxi$avg_speed[taxi$avg_speed > 100] <- NA
+```
 
 Remove `trip_distance` = 0
 ```{r}
@@ -208,9 +223,20 @@ predict that larger groups may travel to more touristy areas.
 ## Plot of `pct_tip` by `avg_speed`
 
 ```{r}
-taxi$avg_speed <- taxi$trip_distance / time
+ggplot(taxi, aes(x = avg_speed, y = tip_pct)) + 
+  geom_point() +
+  labs(title = "Percentage Tipped by Average Speed", x = 
+    "Average Speed (mph)", y = "Percentage Tipped")
 ```
 
+## Plot of `trip_distance` by `avg_speed`
+
+```{r}
+ggplot(taxi, aes(x = avg_speed, y = trip_distance)) + 
+  geom_point() +
+  labs(title = "Trip Distance by Average Speed", x = 
+    "Average Speed (mph)", y = "Percentage Tipped")
+```
 
 ## All-Subsets Regression to Predict `tip_pct`
 
