--- a/taxi_outline.rmd
+++ b/taxi_outline.rmd
@@ -37,4 +37,4 @@ dataset: time (`dropoff_datetime` and `pickup_datetime`), location
       of the city? 
     * Which directions are taxis traveling on average at different times of the 
     day? (net movement into the city in the morning and net movement out in the 
-    evenings?)
+    evenings)
